--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Narciso",
   "license": "ISC",
   "dependencies": {
+    "consign": "^0.1.6",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
